--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appIcon" translatesAutoresizingMaskIntoConstraints="NO" id="BPe-7l-bke">
-                                <rect key="frame" x="65" y="126" width="245" height="245"/>
+                                <rect key="frame" x="65" y="126" width="245" height="245.00000000000006"/>
                                 <color key="backgroundColor" red="1" green="0.86274509803921573" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BPe-7l-bke" secondAttribute="height" multiplier="1:1" id="h3Q-jR-AMV"/>
@@ -69,6 +69,7 @@
                             <constraint firstItem="YDE-83-nlL" firstAttribute="leading" secondItem="b3o-1r-qBr" secondAttribute="leading" constant="90" id="FmP-W1-538"/>
                             <constraint firstItem="0Xi-9Y-JV3" firstAttribute="centerX" secondItem="YDE-83-nlL" secondAttribute="centerX" id="IDX-Ra-6QM"/>
                             <constraint firstItem="0zO-vz-La9" firstAttribute="top" secondItem="b3o-1r-qBr" secondAttribute="top" constant="25" id="Jlg-cX-gvj"/>
+                            <constraint firstItem="b3o-1r-qBr" firstAttribute="trailing" secondItem="BPe-7l-bke" secondAttribute="trailing" constant="65" id="K1B-jl-7Zh"/>
                             <constraint firstItem="BPe-7l-bke" firstAttribute="centerX" secondItem="0zO-vz-La9" secondAttribute="centerX" id="Klz-Hy-caU"/>
                             <constraint firstItem="Psi-wU-9un" firstAttribute="top" secondItem="BPe-7l-bke" secondAttribute="bottom" constant="30" id="KnI-Ph-fTg"/>
                             <constraint firstItem="Psi-wU-9un" firstAttribute="leading" secondItem="b3o-1r-qBr" secondAttribute="leading" constant="169" id="OUl-zI-lMi"/>
@@ -79,6 +80,7 @@
                             <constraint firstItem="b3o-1r-qBr" firstAttribute="bottom" secondItem="0Xi-9Y-JV3" secondAttribute="bottom" constant="100" id="Y8c-LY-rHm"/>
                             <constraint firstItem="0Xi-9Y-JV3" firstAttribute="top" secondItem="YDE-83-nlL" secondAttribute="bottom" constant="50" id="di9-nH-mfY"/>
                             <constraint firstItem="Psi-wU-9un" firstAttribute="centerX" secondItem="b3o-1r-qBr" secondAttribute="centerX" id="gmV-FO-NTq"/>
+                            <constraint firstItem="b3o-1r-qBr" firstAttribute="trailing" secondItem="Psi-wU-9un" secondAttribute="trailing" constant="169" id="kKL-rL-GbD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="b3o-1r-qBr"/>
                     </view>
@@ -807,9 +809,9 @@
                                         </view>
                                         <constraints>
                                             <constraint firstItem="42V-kr-efX" firstAttribute="leading" secondItem="dOH-Ia-cyh" secondAttribute="leading" id="8ed-tA-gJz"/>
+                                            <constraint firstItem="ivD-6F-Z8D" firstAttribute="leading" secondItem="Boe-0f-4y9" secondAttribute="leading" constant="10" id="MBf-B3-BbD"/>
                                             <constraint firstItem="42V-kr-efX" firstAttribute="trailing" secondItem="dOH-Ia-cyh" secondAttribute="trailing" id="MWl-7f-gaX"/>
                                             <constraint firstAttribute="trailing" secondItem="ivD-6F-Z8D" secondAttribute="trailing" constant="10" id="Uud-Cv-7ac"/>
-                                            <constraint firstItem="ivD-6F-Z8D" firstAttribute="centerX" secondItem="Boe-0f-4y9" secondAttribute="centerX" id="YqX-4V-WQv"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dOH-Ia-cyh" secondAttribute="trailing" constant="10" id="Z05-oj-pCN"/>
                                             <constraint firstItem="42V-kr-efX" firstAttribute="top" secondItem="dOH-Ia-cyh" secondAttribute="bottom" constant="10" id="Zc1-mx-KrZ"/>
                                             <constraint firstItem="dOH-Ia-cyh" firstAttribute="top" secondItem="ivD-6F-Z8D" secondAttribute="bottom" constant="10" id="hHt-D2-9hg"/>
@@ -1769,7 +1771,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4YU-rn-3QO"/>
-        <segue reference="6xs-oa-Eow"/>
+        <segue reference="aCF-eo-sAT"/>
         <segue reference="GOj-34-Pew"/>
     </inferredMetricsTieBreakers>
 </document>
