--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -598,7 +598,7 @@
                                     <constraint firstAttribute="width" secondItem="f0X-rk-bG2" secondAttribute="height" multiplier="1:1" id="v9a-74-kuY"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdM-Wa-hI0">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdM-Wa-hI0">
                                 <rect key="frame" x="60" y="424" width="255" height="23"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                 <nil key="textColor"/>
@@ -608,7 +608,7 @@
                                 <rect key="frame" x="177.5" y="331" width="20" height="20"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IW-qn-uYe">
-                                <rect key="frame" x="60" y="537" width="255" height="30"/>
+                                <rect key="frame" x="60" y="558" width="255" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.82352941180000006" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -620,10 +620,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2IW-qn-uYe" firstAttribute="top" secondItem="QdM-Wa-hI0" secondAttribute="bottom" constant="90" id="DON-dK-eLc"/>
+                            <constraint firstItem="2IW-qn-uYe" firstAttribute="top" relation="greaterThanOrEqual" secondItem="QdM-Wa-hI0" secondAttribute="bottom" constant="30" id="DON-dK-eLc"/>
                             <constraint firstItem="f0X-rk-bG2" firstAttribute="top" secondItem="Btx-4P-0so" secondAttribute="top" constant="60" id="MFH-nV-4iQ"/>
                             <constraint firstItem="cR6-tR-PTV" firstAttribute="centerX" secondItem="Btx-4P-0so" secondAttribute="centerX" id="Mzm-zg-cca"/>
                             <constraint firstItem="f0X-rk-bG2" firstAttribute="leading" secondItem="Btx-4P-0so" secondAttribute="leading" constant="60" id="Vfc-c9-eHg"/>
+                            <constraint firstItem="Btx-4P-0so" firstAttribute="bottom" secondItem="2IW-qn-uYe" secondAttribute="bottom" constant="30" id="Xuz-TT-xlG"/>
                             <constraint firstItem="2IW-qn-uYe" firstAttribute="centerX" secondItem="Btx-4P-0so" secondAttribute="centerX" id="Zu6-N4-4Ne"/>
                             <constraint firstItem="QdM-Wa-hI0" firstAttribute="trailing" secondItem="f0X-rk-bG2" secondAttribute="trailing" id="kmL-VV-ggl"/>
                             <constraint firstItem="QdM-Wa-hI0" firstAttribute="leading" secondItem="f0X-rk-bG2" secondAttribute="leading" id="r7S-ck-OhK"/>
@@ -1772,7 +1773,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4YU-rn-3QO"/>
-        <segue reference="aCF-eo-sAT"/>
+        <segue reference="6xs-oa-Eow"/>
         <segue reference="GOj-34-Pew"/>
     </inferredMetricsTieBreakers>
 </document>
